# HelloWorld

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HelloWorld.sln  clang-logs.txt
.bench/: dump_19868594529900.txt  dump_19918593223000.txt
HelloWorld/: Camera.hpp  GlslTypes.cpp  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  IO.cpp  IO.hpp  Light.hpp  Main.cpp  Shader.cpp  Shader.hpp  Transform.hpp  lightShader.frag  lightShader.vert  shader.frag  shader.vert
HelloWorld/include/assimp/: revision.h
HelloWorld/include/glad/: glad.h
HelloWorld/src/: IO.hpp  Light.hpp  Math.hpp  Model.hpp  Shader.hpp  Transform.hpp  benchmark.cpp  ecs.hpp  entry.cpp  glad.c  main.cpp  variadicUtils.hpp
engine/: CMakeLists.txt
engine/include/common/: componentUtils.hpp  constexprUtils.hpp  environment.hpp  functionTraits.hpp  typeHash.hpp  typeInfo.hpp  withMutex.hpp
engine/include/ecs/: ecs.hpp  ecs_helpers.hpp
engine/include/engine/: alloc.hpp  app.hpp  benchmark.hpp  data.hpp  errorHandling.hpp  graphics.hpp  input.hpp  log.hpp  memory.hpp  os.hpp  quickVector.hpp  ref.hpp  refs.hpp  task.hpp  tasks.hpp  template.hpp  thread.hpp  vector2.hpp  window.hpp  worldGrid.hpp
engine/include/engine/components/: camera.hpp  componentUtility.hpp  meshRenderer.hpp  pointerRead.hpp  renderTriangle.hpp  transform.hpp
engine/include/engine/components/test/: renderTriangle.hpp
engine/include/engine/components/ui/: canvasRendering.hpp  uiButton.hpp  uiHorizontalLayout.hpp  uiImage.hpp  uiImageButton.hpp  uiRenderer.hpp  uiSelectable.hpp  uiTransform.hpp
engine/include/engine/graphics/: renderTriangle.hpp
engine/include/logFormats/: glmLogFormats.hpp
glad/: CMakeLists.txt
glad/src/: wgl.cpp
vendors/glad/: CMakeLists.txt
vendors/vtune/: CMakeLists.txt
windows/: CMakeLists.txt
windows/include/: animateTransform.hpp  benchmark.hpp  debugShortcuts.hpp  fpsMoveAround.hpp  pointerDebug.hpp
windows/src/: debugShortcuts.hpp  entry.cpp
(+12 files in other folders)
